"Entry without section" error. Also, to maintain proper sorting in the generated
changelogs when making a new release, docs/changelog.txt in the dfhack repo must
have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools

## New Features

## Fixes
- `list-agreements`: fix date math when determining petition age
- `gui/petitions`: fix date math when determining petition age

## Misc Improvements
- `fix/loyaltycascade`: now also breaks up brawls and other intra-fort conflicts that *look* like loyalty cascades
- `makeown`: remove selected unit from any current conflicts so they don't just start attacking other citizens when you make them a citizen of your fort

## Removed

# 51.09-r1

## New Features
- `gui/mass-remove`: add a button to the bottom toolbar when eraser mode is active for launching `gui/mass-remove`
- `idle-crafting`: default to only considering happy and ecstatic units for the highest need threshold
- `gui/sitemap`: add a button to the toolbar at the bottom left corner of the screen for launching `gui/sitemap`

## Fixes
- `idle-crafting`: check that units still have crafting needs before creating a job for them
- `gui/journal`: prevent pause/unpause events from leaking through the UI when keys are mashed

# 51.07-r1

## New Tools
- `devel/export-map`: export map tile data to a JSON file
- `autocheese`: automatically make cheese using barrels that have accumulated sufficient milk
- `gui/spectate`: interactive UI for configuring `spectate`
- `gui/notes`: UI for adding and managing notes attached to tiles on the map
- `launch`: (reinstated) new adventurer fighting move: thrash your enemies with a flying suplex
- `putontable`: (reinstated) make an item appear on a table

## New Features