@@ -1,0 +1,17 @@
+devel/dflayout
+==============
+
+.. dfhack-tool::
+    :summary: Demonstrate the DF UI element position calculations available in the gui.dflayout module.
+    :tags: dev
+
+The demonstrations are GUI-based notations that show the calculated positions of
+the supported DF UI elements. The main window includes a list of toggleable
+demonstrations.
+
+Usage
+-----
+
+::
+
+    devel/dflayout
